# table-to-title

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  author-list-from-table-v2.py
.github/workflows/: deploy.yml
src/: export.rs  format.rs  lib.rs  main.rs  parse.rs
static/: index.html
web/: index.html
